Updated Logic_Building_Task_2 notebook

--- a/Logic_Building_Task_2.ipynb
+++ b/Logic_Building_Task_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO045UVD7oGY8C+EFn1dJRv",
+      "authorship_tag": "ABX9TyOVFShA6c0IZDwnWD9EYAXf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,16 +52,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "djrG0nrhUxaO",
-        "outputId": "ee91962d-ed3d-444f-eada-4af64e57469b"
+        "outputId": "0c2dc105-e2cd-4337-b5d8-406e0a4b85b6"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter sentence: Ensure your Python code is clean, organized, and well-structured.\n",
-            "Unique words count: 9\n",
-            "Unique words: {'Ensure', 'is', 'and', 'code', 'well-structured.', 'clean,', 'organized,', 'your', 'Python'}\n"
+            "Enter sentence: python is easy and python is powerful\n",
+            "Unique words count: 5\n",
+            "Unique words: {'python', 'and', 'is', 'easy', 'powerful'}\n"
           ]
         }
       ],
@@ -94,7 +94,7 @@
       "source": [
         "# Employee dictionary\n",
         "employees = {\n",
-        "    \"Aman\": 80000,\n",
+        "    \"Ravi\": 75000,\n",
         "    \"Anita\": 68000,\n",
         "    \"Kiran\": 72000\n",
         "}\n",
@@ -103,23 +103,22 @@
         "highest_employee = max(employees, key=employees.get)\n",
         "\n",
         "# Print result\n",
-        "print(\"Highest Salary:\", highest_employee, \"-\", employees[highest_employee])\n",
-        "\n"
+        "print(\"Highest Salary:\", highest_employee, \"-\", employees[highest_employee])\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "sCPzebA7kFXJ",
-        "outputId": "022692b4-d667-4836-f3da-6d3bcc135b4b"
+        "outputId": "27b75b44-4911-4809-e542-bf37273e753c"
       },
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Highest Salary: Aman - 80000\n"
+            "Highest Salary: Ravi - 75000\n"
           ]
         }
       ]
@@ -137,7 +136,7 @@
       "cell_type": "code",
       "source": [
         "# Given list\n",
-        "numbers = [55,69,58,78,96,26]\n",
+        "numbers = [45, 22, 89, 10, 66]\n",
         "\n",
         "# Step 1: Initialize max and min with first element\n",
         "maximum = numbers[0]\n",
@@ -160,17 +159,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CcxkpswNmYL-",
-        "outputId": "fec36c9c-0351-4033-b517-eaf105b23ce8"
+        "outputId": "ff53529f-fbba-420c-cdfe-d6f09a196dc9"
       },
-      "execution_count": 8,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "List: [55, 69, 58, 78, 96, 26]\n",
-            "Max: 96\n",
-            "Min: 26\n"
+            "List: [45, 22, 89, 10, 66]\n",
+            "Max: 89\n",
+            "Min: 10\n"
           ]
         }
       ]
@@ -188,7 +187,7 @@
       "cell_type": "code",
       "source": [
         "# Given list of product prices\n",
-        "prices = [550, 1300, 899, 1400, 1400]\n",
+        "prices = [450, 1200, 899, 1500, 300]\n",
         "\n",
         "# Counter variable\n",
         "count = 0\n",
@@ -199,22 +198,22 @@
         "        count += 1\n",
         "\n",
         "# Print result\n",
-        "print(\"Products above 1000:\", count)"
+        "print(\"Products above 1000:\", count)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "W4gCo3rLmxCU",
-        "outputId": "cb474562-006a-4f1f-85ea-de83d1ada48c"
+        "outputId": "df62561d-e884-40a8-bd2b-e249ac0013b5"
       },
-      "execution_count": 10,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Products above 1000: 3\n"
+            "Products above 1000: 2\n"
           ]
         }
       ]
@@ -232,7 +231,7 @@
       "cell_type": "code",
       "source": [
         "# Given attendance list\n",
-        "attendance = [\"P\", \"P\", \"A\", \"A\", \"A\"]\n",
+        "attendance = [\"P\", \"P\", \"A\", \"P\", \"P\"]\n",
         "\n",
         "# Step 1: Count total days\n",
         "total_days = len(attendance)\n",
@@ -255,15 +254,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yihPaHscnSQ2",
-        "outputId": "94189225-e9a7-4c1f-ca77-566c9ec81af6"
+        "outputId": "0162602b-5b01-4ffa-f619-44dda7c59a2b"
       },
-      "execution_count": 12,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Attendance Percentage: 40.0\n"
+            "Attendance Percentage: 80.0\n"
           ]
         }
       ]
@@ -281,7 +280,8 @@
       "cell_type": "code",
       "source": [
         "# Given list of phone numbers\n",
-        "phone_numbers = [9876595810, 9695841123, 9695841123]\n",
+        "phone_numbers = [9876543210, 9123456789, 9876543210]\n",
+        "\n",
         "# Convert list to set (removes duplicates)\n",
         "unique_numbers = set(phone_numbers)\n",
         "\n",
@@ -293,15 +293,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "le5fEiKonpjN",
-        "outputId": "8b0b4fce-14dd-46b3-e5e7-258f465d40fb"
+        "outputId": "459cb8b2-7011-4969-854a-6b634ff40b46"
       },
-      "execution_count": 15,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Unique phone numbers: {9876595810, 9695841123}\n"
+            "Unique phone numbers: {9876543210, 9123456789}\n"
           ]
         }
       ]
@@ -319,7 +319,7 @@
       "cell_type": "code",
       "source": [
         "# Given string\n",
-        "text = \"Dictionary\"\n",
+        "text = \"python\"\n",
         "\n",
         "# Empty dictionary to store frequency\n",
         "char_count = {}\n",
@@ -339,15 +339,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rHch1a5QoKFV",
-        "outputId": "98ec92c9-fd30-4eac-c459-af647c1b84b3"
+        "outputId": "3c9a0f2e-8654-426f-e89e-ff436fa0db3e"
       },
-      "execution_count": 17,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'D': 1, 'i': 2, 'c': 1, 't': 1, 'o': 1, 'n': 1, 'a': 1, 'r': 1, 'y': 1}\n"
+            "{'p': 1, 'y': 1, 't': 1, 'h': 1, 'o': 1, 'n': 1}\n"
           ]
         }
       ]
@@ -365,7 +365,7 @@
       "cell_type": "code",
       "source": [
         "# Given list\n",
-        "numbers = [40, 60, 30]\n",
+        "numbers = [10, 20, 30]\n",
         "\n",
         "# Convert list to tuple\n",
         "numbers_tuple = tuple(numbers)\n",
@@ -378,15 +378,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "I0jnsoX4onqj",
-        "outputId": "d17c68ca-0b7b-4c83-e2dd-7066db12db2c"
+        "outputId": "89ac35a1-59e5-4b17-fefd-23b5f849b51f"
       },
-      "execution_count": 19,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Tuple: (40, 60, 30)\n"
+            "Tuple: (10, 20, 30)\n"
           ]
         }
       ]
@@ -405,7 +405,7 @@
       "source": [
         "# Given dictionary\n",
         "employees = {\n",
-        "    \"Ankit\": 75000,\n",
+        "    \"Ravi\": 75000,\n",
         "    \"Anita\": 68000,\n",
         "    \"Kiran\": 72000\n",
         "}\n",
@@ -424,15 +424,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Dp_Q64yvo6rM",
-        "outputId": "efd43efc-63ac-43b3-f976-11448b83f1d0"
+        "outputId": "d486eddf-369d-491e-a9a1-f881afb85cad"
       },
-      "execution_count": 21,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Employee does not exist\n"
+            "Employee exists\n"
           ]
         }
       ]
@@ -450,7 +450,7 @@
       "cell_type": "code",
       "source": [
         "# Given list of marks\n",
-        "marks = [65, 80, 85, 75]\n",
+        "marks = [65, 70, 80, 75]\n",
         "\n",
         "# Step 1: Calculate total marks\n",
         "total = sum(marks)\n",
@@ -469,15 +469,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OUkcHMaIpP10",
-        "outputId": "1f709eb8-a964-4ddc-9137-9c698c50d734"
+        "outputId": "a8d8c0a8-aef4-4b28-bd3d-ac2827698bc0"
       },
-      "execution_count": 23,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Average Marks: 76.25\n"
+            "Average Marks: 72.5\n"
           ]
         }
       ]
